--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+/src/server.js
 
 # testing
 /coverage
@@ -18,7 +19,7 @@
 yarn.lock
 package.json
 package-lock.json
-*.min.css
+/src/*.min.css
 
 npm-debug.log*
 yarn-debug.log*
